fix(x-markdown): When dark mode is enabled, the styles of the CodeHighlighter and Mermaid components are incorrect.

--- a/packages/x-markdown/src/themes/dark.css
+++ b/packages/x-markdown/src/themes/dark.css
@@ -150,25 +150,33 @@
   background-color: var(--cite-hover-bg);
 }
 
-.x-markdown-dark pre code:not([class$="-highlightCode-code"] pre code) {
+.x-markdown-dark pre code {
   display: block;
-  background: var(--dark-bg) !important;
+  background: var(--dark-bg);
   padding: var(--padding-code);
-  color: var(--text-color) !important;
+  color: var(--text-color);
   line-height: 1.3;
   font-size: var(--font-size);
   border-radius: var(--border-radius-middle);
   margin: var(--margin-pre);
 }
 
-.x-markdown-dark code:not([class$="-highlightCode-code"] code):not(pre code) {
-  background-color: var(--dark-bg) !important;
-  color: var(--text-color) !important;
+.x-markdown-dark [class$="-highlightCode-code"] pre code {
+  all: unset;
+}
+
+.x-markdown-dark :not(pre) > code {
+  background-color: var(--dark-bg);
+  color: var(--text-color);
   border-radius: var(--border-radius-small);
   padding: 2px 6px;
   margin-inline: 3px;
   font-size: var(--font-size);
   border: 1px solid var(--border-color);
+}
+
+.x-markdown-dark [class$="-highlightCode-code"] code {
+  all: unset;
 }
 
 .x-markdown-dark img {
